Fix Bug 437903 Can't send emails to OS X mailing lists and also the last part of bug 439470 mailing list dialog for OS X address books doesn't list addresses. r/sr=bienvenu